--- a/tests/provisioning-manifest-build.yml
+++ b/tests/provisioning-manifest-build.yml
@@ -1,2 +1,9 @@
 - addMavenRepository: 'https://store.jahia.com/nexus/content/repositories/jahia-public-app-store@id=JahiaStore'
 - addMavenRepository: 'https://devtools.jahia.com/nexus/content/groups/public/@snapshots@noreleases@id=JahiaSnapshot'
+  username: ${env:NEXUS_USERNAME}
+  password: ${env:NEXUS_PASSWORD}
+- installBundle:
+    - url: 'mvn:org.jahia.bundles/org.jahia.bundles.client-cache'
+    - url: 'mvn:org.jahia.modules/client-cache-control-test-template'
+  autoStart: true
+  uninstallPreviousVersion: true
