Fix uninstall/install of bundle during Jahia startup in env.run.sh

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     </parent>
     <name>Jahia Client Cache Bundle</name>
     <groupId>org.jahia.bundles</groupId>
-    <artifactId>org.jahia.bundles.client-cache</artifactId>
+    <artifactId>org.jahia.bundles.client-cache-control</artifactId>
     <packaging>bundle</packaging>
 
     <properties>
