--- a/tests/jahia-module/pom.xml
+++ b/tests/jahia-module/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.jahia.modules</groupId>
         <version>8.2.1.0-SNAPSHOT</version>
     </parent>
+    <groupId>org.jahia.qa</groupId>
     <artifactId>client-cache-control-test-template</artifactId>
     <name>JAHIA Client Cache Control Test Template</name>
     <version>2.0.0-SNAPSHOT</version>
