Fix loading config from jar when not present in karaf etc

--- a/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.cfg
+++ b/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.cfg
@@ -1,5 +1,7 @@
 #Cache policies
 #
+config.description=Default cache policies
+#
 #The order of the policies is important, the first matching policy (urlPattern) will be applied
 #The policy set a request attribute (the policy key : public|private|immutable|custom) that will be transformed into a request header in the end
 #If any other component override the response header during processing, filter won't apply it's policy but keep the existing header.
