--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,39 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-immutable.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>client-cache-control-rule-immutable-cfg</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-private.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>client-cache-control-rule-private-cfg</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-public.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>client-cache-control-rule-public-cfg</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.cyclonedx</groupId>
                 <artifactId>cyclonedx-maven-plugin</artifactId>
                 <version>2.7.9</version>
