Refactor configuration to use ocd for main config and a factory for rules allowing better OSGI UI rendering. Wrap bundle in a feature to pack also config files

--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-public.cfg
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-public.cfg
@@ -3,4 +3,4 @@ name=Public caching during one second with revalidate
 description=Default cache strategy for render chain, JCR, files and modules (could be override in RenderChain)
 methodsPattern=^(GET|HEAD)$
 urlPattern=^/(cms/render/live|files|repository|modules)/.*$
-ccHeaderTemplate=public
+headerTemplate=public
