Fix missing remove before updating rule and rename feature groupid

--- a/client-cache-control-feature/pom.xml
+++ b/client-cache-control-feature/pom.xml
@@ -52,6 +52,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <name>Jahia Client Cache Control OSGI Feature</name>
+    <groupId>org.jahia.features</groupId>
     <artifactId>client-cache-control</artifactId>
     <packaging>kar</packaging>
 
