--- a/.github/workflows/on-code-change.yml
+++ b/.github/workflows/on-code-change.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           nexus_username: ${{ secrets.NEXUS_USERNAME }}
           nexus_password: ${{ secrets.NEXUS_PASSWORD }}
-          module_id: jahia-csrf-guard
+          module_id: client-cache-control-root
           mvn_settings_filepath: '.github/maven.settings.xml'
 
   sonar-analysis:
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: jahia/jahia-modules-action/integration-tests@v2
         with:
-          module_id: client-cache-control
+          module_id: client-cache-control-root
           testrail_project: Jahia Client Cache Control Bundle
           tests_manifest: provisioning-manifest-snapshot.yml
           jahia_image: jahia/jahia-ee-dev:8-SNAPSHOT
