--- a/tests/jahia-module/pom.xml
+++ b/tests/jahia-module/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>8.2.1.0-SNAPSHOT</version>
+        <version>8.2.1.0</version>
     </parent>
     <groupId>org.jahia.qa</groupId>
     <artifactId>client-cache-control-test-template</artifactId>
-    <name>JAHIA Client Cache Control Test Template</name>
-    <version>2.0.0-SNAPSHOT</version>
+    <name>Jahia Client Cache Control Test Template</name>
+    <version>9.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <description>This are the custom template for internal tests.</description>
     <repositories>
