--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-private.cfg
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-private.cfg
@@ -2,5 +2,5 @@ index=2
 name=Private no caching
 description=Resources that should not be cached
 methodsPattern=^(GET|HEAD)$
-urlPattern=/(welcome.*|start|validateTicket|administration.*|cms/.*|engines/.*\\.jsp(\\?.*)?|tools/.*|gwt/.*\\.nocache\\..*)
+urlPattern=/(welcome.*|start|validateTicket|administration.*|cms/.*|engines/.*\\.jsp(\\?.*)?|tools/.*|modules/.*|gwt/.*\\.nocache\\..*)
 headerTemplate=private
