--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-public.cfg
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.rule-public.cfg
@@ -2,5 +2,5 @@ index=1
 name=Public caching during one second with revalidate
 description=Default cache strategy for render chain, JCR, files and modules (could be override in RenderChain)
 methodsPattern=^(GET|HEAD)$
-urlPattern=^/(cms/render/live|files|repository|modules)/.*$
+urlPattern=^/(cms/render/live|files|repository)/.*$
 headerTemplate=public
