--- a/tests/provisioning-manifest-snapshot.yml
+++ b/tests/provisioning-manifest-snapshot.yml
@@ -1,32 +1,23 @@
 - addMavenRepository: 'https://store.jahia.com/nexus/content/repositories/jahia-public-app-store@id=JahiaStore'
 - addMavenRepository: 'https://devtools.jahia.com/nexus/content/groups/public/@snapshots@noreleases@id=JahiaSnapshot'
 
-- editConfiguration: 'org.jahia.bundles.cache.client.rule'
-  configIdentifier: 'public'
+- editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
+  configIdentifier: 'default'
   properties:
-    index: '1'
-    name: 'Public caching during one second with revalidate'
-    description: 'Default cache strategy for render chain, JCR, files and modules (could be override in RenderChain)'
-    methodsPattern: '^(GET|HEAD)$'
-    urlPattern: '^/(cms/render/live|files|repository|modules)/.*$'
-    headerTemplate: 'public'
-
-- editConfiguration: 'org.jahia.bundles.cache.client.rule'
-  configIdentifier: 'private'
-  properties:
-    index: '2'
-    name: 'Private with no caching'
-    description: 'Resources that should not be cached'
-    methodsPattern: '^(GET|HEAD)$'
-    urlPattern: '/(welcome.*|start|validateTicket|administration.*|cms/.*|engines/.*\\.jsp(\\?.*)?|tools/.*|gwt/.*\\.nocache\\..*)'
-    headerTemplate: 'private'
-
-- editConfiguration: 'org.jahia.bundles.cache.client.rule'
-  configIdentifier: 'immutable'
-  properties:
-    index: '3'
-    name: 'Immutable caching for one month'
-    description: 'Cache all unfiltered resources'
-    methodsPattern: '^(GET|HEAD)$'
-    urlPattern: '/.*'
-    headerTemplate: 'immutable'
+    name: 'Default ruleset (test)'
+    description: 'Default ruleset (test)'
+    rules:
+      - "GET|HEAD,(?:/[^/]+)?/files/.*,template:public"
+      - "GET|HEAD,(?:/[^/]+)?/repository/.*,template:public"
+      - "GET|HEAD,(?:/[^/]+)?/cms/render/live/.*,template:public"
+      - "GET|HEAD,(?:/[^/]+)?/welcome.*,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/start,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/validateTicket,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/administration.*,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/cms/.*,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/tools/.*,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/modules/.*,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/gwt/.*\\.nocache\\..*,template:private"
+      - "GET|HEAD,(?:/[^/]+)?/generated-resources/.*,template:immutable"
+      - "GET|HEAD,/.*,template:public"
