--- a/client-cache-control-feature/pom.xml
+++ b/client-cache-control-feature/pom.xml
@@ -51,14 +51,20 @@
         <artifactId>client-cache-control-root</artifactId>
         <version>9.0.0-SNAPSHOT</version>
     </parent>
-    <name>Jahia Client Cache Control OSGI Feature</name>
+    <name>Jahia Client Cache Control Feature</name>
     <artifactId>client-cache-control</artifactId>
+    <version>9.0.0-SNAPSHOT</version>
     <packaging>kar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.jahia.bundles</groupId>
-            <artifactId>org.jahia.bundles.client-cache-control</artifactId>
+            <artifactId>org.jahia.bundles.client-cache-control-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.bundles</groupId>
+            <artifactId>org.jahia.bundles.client-cache-control-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
