--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
     </distributionManagement>
 
     <modules>
+        <module>client-cache-control-api</module>
         <module>client-cache-control-bundle</module>
         <module>client-cache-control-feature</module>
     </modules>
