Change rule separator to permit comma in non template based header Increase test coverage to Non Template based cache rules

--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
@@ -1,17 +1,17 @@
 name: 'Default ruleset'
 description: 'Default ruleset'
 rules:
-  - "GET|HEAD,(?:/[^/]+)?/files/.*,template:public"
-  - "GET|HEAD,(?:/[^/]+)?/repository/.*,template:public"
-  - "GET|HEAD,(?:/[^/]+)?/cms/render/live/.*,template:public"
-  - "GET|HEAD,(?:/[^/]+)?/welcome.*,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/start,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/validateTicket,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/administration.*,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/cms/.*,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/tools/.*,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/modules/.*,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/gwt/.*\\.nocache\\..*,template:private"
-  - "GET|HEAD,(?:/[^/]+)?/generated-resources/.*,template:immutable"
-  - "GET|HEAD,/.*,template:public"
+  - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
+  - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
+  - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
+  - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/start;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
+  - "GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
+  - "GET|HEAD;/.*;template:public"
