feat: friendly rules with ruleset for better config (#11)
* Refactor configuration to use ocd for main config and a factory for rules allowing better OSGI UI rendering.
Wrap bundle in a feature to pack also config files
* Externalize bundle API in dedicated bundle for loose coupling
Upgrade rule format and allow ruleset config
Update existing rules to better handle context
* Change rule separator to permit comma in non template based header
Increase test coverage to Non Template based cache rules
* Add some doc and avoid strict policy to apply on default policy

--- a/tests/provisioning-manifest-snapshot.yml
+++ b/tests/provisioning-manifest-snapshot.yml
@@ -1,2 +1,23 @@
 - addMavenRepository: 'https://store.jahia.com/nexus/content/repositories/jahia-public-app-store@id=JahiaStore'
 - addMavenRepository: 'https://devtools.jahia.com/nexus/content/groups/public/@snapshots@noreleases@id=JahiaSnapshot'
+
+- editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
+  configIdentifier: 'default'
+  properties:
+    name: 'Default ruleset (test)'
+    description: 'Default ruleset (test)'
+    rules:
+      - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
+      - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
+      - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
+      - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/start;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
+      - "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
+      - "GET|HEAD;/.*;template:public"
