--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
@@ -17,6 +17,7 @@ rules:
   - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
   - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
   - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
+  - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public"
   - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
   - "GET|HEAD;(?:/[^/]+)?/start;template:private"
   - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
@@ -24,7 +25,6 @@ rules:
   - "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
   - "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
   - "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:private"
   - "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
   - "GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
   - "POST|DELETE|PATCH;.*;template:private"
