--- a/tests/provisioning-manifest-snapshot.yml
+++ b/tests/provisioning-manifest-snapshot.yml
@@ -10,6 +10,7 @@
       - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
       - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
       - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
+      - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public"
       - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
       - "GET|HEAD;(?:/[^/]+)?/start;template:private"
       - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
@@ -17,7 +18,13 @@
       - "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
       - "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
       - "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:private"
       - "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
       - "GET|HEAD;/.*;template:public"
+
+- editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
+  configIdentifier: 'custom'
+  properties:
+    name: 'Custom ruleset (test)'
+    description: 'Custom ruleset (test)'
+    rules:
+      - "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
