--- a/tests/provisioning-manifest-snapshot.yml
+++ b/tests/provisioning-manifest-snapshot.yml
@@ -6,18 +6,24 @@
   properties:
     name: 'Default ruleset (test)'
     description: 'Default ruleset (test)'
-    rules:
-      - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
-      - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
-      - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
-      - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/start;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
-      - "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
-      - "GET|HEAD;/.*;template:public"
+    rules[0]: "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
+    rules[1]: "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
+    rules[2]: "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
+    rules[3]: "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public"
+    rules[4]: "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
+    rules[5]: "GET|HEAD;(?:/[^/]+)?/start;template:private"
+    rules[6]: "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
+    rules[7]: "GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
+    rules[8]: "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
+    rules[9]: "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
+    rules[10]: "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
+    rules[11]: "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
+    rules[12]: "GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
+    rules[13]: "GET|HEAD;/.*;template:private"
+
+- editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
+  configIdentifier: 'custom'
+  properties:
+    name: 'Custom ruleset (test)'
+    description: 'Custom ruleset (test)'
+    rules[0]: "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
