Fix nightly test

--- a/tests/provisioning-manifest-snapshot.yml
+++ b/tests/provisioning-manifest-snapshot.yml
@@ -19,9 +19,9 @@
     rules[10]: "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
     rules[11]: "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
     rules[12]: "GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
-    rules[13]: "GET|HEAD;/.*;template:private"
+    rules[13]: "GET|HEAD;/.*;template:public"
 
-- installConfiguration: 'org.jahia.bundles.cache.client.ruleset'
+- editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
   configIdentifier: 'custom'
   properties:
     name: 'Custom ruleset (test)'
