--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
     <modules>
         <module>client-cache-control-api</module>
         <module>client-cache-control-bundle</module>
+        <module>client-cache-control-cloudfront</module>
         <module>client-cache-control-feature</module>
     </modules>
 </project>
