--- a/tests/provisioning-manifest-build.yml
+++ b/tests/provisioning-manifest-build.yml
@@ -1,26 +1,22 @@
 - addMavenRepository: 'https://store.jahia.com/nexus/content/repositories/jahia-public-app-store@id=JahiaStore'
 - addMavenRepository: 'https://devtools.jahia.com/nexus/content/groups/public/@snapshots@noreleases@id=JahiaSnapshot'
+- addFeatureRepository: 'mvn:org.jahia.bundles/client-cache-control/9.0.0-SNAPSHOT/xml/features'
+
+- installFeature: 'client-cache-control'
 
 - editConfiguration: 'org.jahia.bundles.cache.client'
   properties:
     mode: 'strict'
+    intermediates.ttl: '300'
+    immutable.ttl: '2678400'
+    cache.header.template.private: 'private, no-cache, no-store, must-revalidate, proxy-revalidate, max-age=0'
+    cache.header.template.public: 'public, must-revalidate, max-age=1, s-maxage=%%jahiaClientCacheCustomTTL%%, stale-while-revalidate=15'
+    cache.header.template.custom: 'public, must-revalidate, max-age=1, s-maxage=##intermediates.ttl##, stale-while-revalidate=15'
+    cache.header.template.immutable: 'public, max-age=##immutable.ttl##, s-maxage=##immutable.ttl##, stale-while-revalidate=15, immutable'
 
 - editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
-  configIdentifier: 'default'
+  configIdentifier: 'custom'
   properties:
-    name: 'Default ruleset (test)'
-    description: 'Default ruleset (test)'
-    rules[0]: "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
-    rules[1]: "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
-    rules[2]: "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
-    rules[3]: "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public"
-    rules[4]: "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
-    rules[5]: "GET|HEAD;(?:/[^/]+)?/start;template:private"
-    rules[6]: "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
-    rules[7]: "GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
-    rules[8]: "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
-    rules[9]: "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
-    rules[10]: "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
-    rules[11]: "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
-    rules[12]: "GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
-    rules[13]: "GET|HEAD;/.*;template:private"
+    name: 'Custom ruleset (test)'
+    description: 'Custom ruleset (test)'
+    rules[0]: "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
