--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
@@ -14,10 +14,10 @@
 name: "Default ruleset"
 description: "Default ruleset"
 rules:
-  - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public"
-  - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public"
+  - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public-medium"
+  - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public-medium"
   - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
-  - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public"
+  - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public-medium"
   - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
   - "GET|HEAD;(?:/[^/]+)?/start;template:private"
   - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
