feat: add index for rules feat: add graphql api

--- a/client-cache-control-feature/pom.xml
+++ b/client-cache-control-feature/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>org.jahia.bundles.client-cache-control-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.bundles</groupId>
+            <artifactId>org.jahia.bundles.client-cache-control-graphql</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
