--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
@@ -14,17 +14,17 @@
 name: "Default ruleset"
 description: "Default ruleset"
 rules:
-  - "GET|HEAD;(?:/[^/]+)?/files/.*;template:public-medium"
-  - "GET|HEAD;(?:/[^/]+)?/repository/.*;template:public-medium"
-  - "GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
-  - "GET|HEAD;(?:/[^/]+)?/modules/.*;template:public-medium"
-  - "GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/start;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
-  - "GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
-  - "POST|DELETE|PATCH;.*;template:private"
+  - "1;GET|HEAD;(?:/[^/]+)?/cms/render/live/.*;template:public"
+  - "2;GET|HEAD;(?:/[^/]+)?/cms/.*;template:private"
+  - "3;GET|HEAD;(?:/[^/]+)?/welcome.*;template:private"
+  - "4;GET|HEAD;(?:/[^/]+)?/start;template:private"
+  - "5;GET|HEAD;(?:/[^/]+)?/validateTicket;template:private"
+  - "6;GET|HEAD;(?:/[^/]+)?/administration.*;template:private"
+  - "7;GET|HEAD;(?:/[^/]+)?/files/.*;template:public-medium"
+  - "8;GET|HEAD;(?:/[^/]+)?/repository/.*;template:public-medium"
+  - "9;GET|HEAD;(?:/[^/]+)?/modules/.*;template:public-medium"
+  - "10;GET|HEAD;(?:/[^/]+)?/engines/.*\\.jsp(\\?.*)?;template:private"
+  - "11;GET|HEAD;(?:/[^/]+)?/tools/.*;template:private"
+  - "12;GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
+  - "13;GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
+  - "14;POST|DELETE|PATCH;.*;template:private"
