--- a/tests/provisioning-manifest-build.yml
+++ b/tests/provisioning-manifest-build.yml
@@ -13,4 +13,4 @@
   properties:
     name: 'Custom ruleset (test)'
     description: 'Custom ruleset (test)'
-    rules[0]: "GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
+    rules[0]: "8.9;GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
