feat: add karaf action for listing rules in tests fix: remove graphql from feature feat: upgrade API

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <jahia.version>8.2.1.0</jahia.version>
+        <graphql-dxm-provider.version>3.0.0</graphql-dxm-provider.version>
     </properties>
 
     <scm>
