--- a/client-cache-control-bundle/pom.xml
+++ b/client-cache-control-bundle/pom.xml
@@ -26,6 +26,7 @@
                 <configuration>
                     <instructions>
                         <_dsannotations>*</_dsannotations>
+                        <Karaf-Commands>*</Karaf-Commands>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                     </instructions>
@@ -89,6 +90,7 @@
             <groupId>org.jahia.bundles</groupId>
             <artifactId>org.jahia.bundles.client-cache-control-api</artifactId>
             <version>9.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.server</groupId>
@@ -100,6 +102,11 @@
             <groupId>org.osgi</groupId>
             <artifactId>osgi.core</artifactId>
             <version>${osgi.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.karaf.shell</groupId>
+            <artifactId>org.apache.karaf.shell.console</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
