--- a/client-cache-control-graphql/pom.xml
+++ b/client-cache-control-graphql/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <import-package>org.jahia.bundles.filters.cache.client.api</import-package>
+        <private-package>org.jahia.bundles.filters.cache.client.graphql</private-package>
     </properties>
 
     <build>
@@ -65,6 +66,7 @@
             <groupId>org.jahia.bundles</groupId>
             <artifactId>org.jahia.bundles.client-cache-control-api</artifactId>
             <version>9.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
@@ -75,7 +77,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>3.0.0</version>
+            <version>${graphql-dxm-provider.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
