fix: wrong render chain cache policy in edit mode

--- a/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
+++ b/client-cache-control-bundle/src/main/resources/META-INF/configurations/org.jahia.bundles.cache.client.ruleset-default.yml
@@ -28,3 +28,4 @@ rules:
   - "12;GET|HEAD;(?:/[^/]+)?/gwt/.*\\.nocache\\..*;template:private"
   - "13;GET|HEAD;(?:/[^/]+)?/generated-resources/.*;template:immutable"
   - "14;POST|DELETE|PATCH;.*;template:private"
+  - "15;GET|HEAD;.*;template:public"
