--- a/tests/provisioning-manifest-build.yml
+++ b/tests/provisioning-manifest-build.yml
@@ -14,3 +14,10 @@
     name: 'Custom ruleset (test)'
     description: 'Custom ruleset (test)'
     rules[0]: "8.9;GET|HEAD;(?:/[^/]+)?/modules/client-cache-control-test-template/css/style.css;public, plop, tagada"
+
+- editConfiguration: 'org.jahia.bundles.cache.client.ruleset'
+  configIdentifier: 'tools'
+  properties:
+    name: 'Tools module ruleset'
+    description: 'Tools module ruleset'
+    rules[0]: "8.92;GET|HEAD;(?:/[^/]+)?/modules/tools(/.*)?;template:private"
