ci: add github slug for sonar

--- a/.github/workflows/schedule-sonar.yml
+++ b/.github/workflows/schedule-sonar.yml
@@ -21,3 +21,4 @@ jobs:
       tests_module_type: mvn
       git_branch: ${{ matrix.git_branch }}
       incident_service: client-cache-control-sonar
+      github_slug: jahia/client-cache-control
