--- a/.github/workflows/nightly-SN.yml
+++ b/.github/workflows/nightly-SN.yml
@@ -10,7 +10,7 @@ jobs:
     uses:  Jahia/jahia-modules-action/.github/workflows/reusable-integration-tests.yml@v2
     secrets: inherit
     with:
-      jahia_image: jahia/jahia-ee-dev:8-SNAPSHOT
+      jahia_image: ghcr.io/jahia/jahia-ee-dev:8-SNAPSHOT
       module_id: client-cache-control
       testrail_project: Jahia Client Cache Control Bundle
       pagerduty_incident_service: client-cache-control-JahiaSN
