--- a/tests/.env.example
+++ b/tests/.env.example
@@ -1,4 +1,4 @@
-JAHIA_IMAGE=${JAHIA_IMAGE:-jahia/jahia-ee-dev:8-SNAPSHOT}
+JAHIA_IMAGE=${JAHIA_IMAGE:-ghcr.io/jahia/jahia-ee-dev:8-SNAPSHOT}
 TESTS_IMAGE=${TESTS_IMAGE:-jahia/clustering:latest}
 MODULE_ID=${MODULE_ID:-clustering}
 MANIFEST=${MANIFEST:-provisioning-manifest-snapshot.yml}
