--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jahia</groupId>
         <artifactId>jahia-parent</artifactId>
-        <version>8.2.3.0-SNAPSHOT</version>
+        <version>8.2.1.0</version>
     </parent>
     <groupId>org.jahia.bundles</groupId>
     <artifactId>client-cache-control-root</artifactId>
